--- a/production/docker/Dockerfile
+++ b/production/docker/Dockerfile
@@ -49,14 +49,14 @@ RUN npm set registry http://94.130.170.209:4873/
 
 # Clone the rest.bitcoin.com repository
 WORKDIR /home/safeuser
-RUN git clone https://github.com/Permissionless-Software-Foundation/ipfs-service-provider
+RUN git clone https://github.com/Permissionless-Software-Foundation/ipfs-file-stager
 
 # Switch to the desired branch. `master` is usually stable,
 # and `stage` has the most up-to-date changes.
-WORKDIR /home/safeuser/ipfs-service-provider
+WORKDIR /home/safeuser/ipfs-file-stager
 
 # For development: switch to unstable branch
-RUN git checkout ct-unstable
+#RUN git checkout ct-unstable
 
 # Install dependencies
 #RUN mkdir .ipfsdata
