--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@libp2p/websockets": "9.2.2",
     "@multiformats/multiaddr": "12.3.5",
     "axios": "0.27.2",
+    "bch-token-sweep": "2.2.1",
     "bcryptjs": "2.4.3",
     "blockstore-fs": "2.0.2",
     "datastore-fs": "10.0.2",
