--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "node-fetch": "npm:@achingbrain/node-fetch@2.6.7",
     "nodemailer": "6.7.5",
     "passport-local": "1.0.0",
+    "psffpp": "1.2.0",
     "public-ip": "6.0.1",
     "winston": "3.3.3",
     "winston-daily-rotate-file": "4.5.0"
